--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epic-tarot-ranking",
+  "name": "tarot-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.62.1"
   }
 }
